fix logo/hamburger menu alignment

--- a/assets/styles/header.css
+++ b/assets/styles/header.css
@@ -61,7 +61,7 @@ header .header-links .brand a {
   float: left;
   position: relative;
   bottom: -1px;
-  margin: 11px 0;
+  margin: 15px 0;
 }
 
 header .header-links .nav-menu {
