--- a/assets/styles/responsive.css
+++ b/assets/styles/responsive.css
@@ -84,7 +84,7 @@
     width: 16px;
     height: 16px;
     position: relative;
-    margin: 16px;
+    margin: 20px 0;
   }
 
 }
